# avo_qmopt

./: .gitignore  README.md  pyproject.toml
src/avogadro_qmopt/: __init__.py  calcs.py  config.py  links.py
